components/jvm-build-suite-component-vqru/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: jvm-build-suite-application-hxni
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: jvm-build-suite-component-vqru
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eljvm-build-suite-component-vqru
  namespace: appstudio-e2e-test
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-jvm-build-suite-component-vqru
    weight: null
status: {}
